force-app/main/default/objects/Log_Book_Activitiy_Detail__c/Log_Book_Activitiy_Detail__c.object-meta.xml
<CustomObject>
    <description>Log Book Activitiy Detail</description>
    <label>Log Book Activitiy Detail</label>
    <nameField>
        <displayFormat>LBD-{YY}{MM}{DD}{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Log Book Activitiy Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>