force-app/main/default/objects/Log_Book_Activitiy_Detail__c/fields/Cancel_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Transaction__c</fullName>
    <formula>IF ( Canceled__c = TRUE, &quot;YA&quot;, &quot;TIDAK&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cancel Transaction</label>
    <type>Text</type>
</CustomField>