force-app/main/default/objects/Log_Book_Activitiy_Detail__c/fields/Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Type__c</fullName>
    <label>Case Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Kind_Of_Transaction__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Request_CS_Cancelled Redemption</fullName>
            </value>
            <value>
                <fullName>Request_UW_Cancelled SPAJ</fullName>
            </value>
            <value>
                <fullName>Customer Service_Cancelled Transaction</fullName>
            </value>
            <value>
                <fullName>Request_POS_Cancelled Withdrawal</fullName>
            </value>
            <value>
                <fullName>Policy Inquiry_Premium Holiday Status</fullName>
            </value>
            <value>
                <fullName>Policy Inquiry_CS_Cek Lumpsum</fullName>
            </value>
            <value>
                <fullName>Policy Inquiry_NB/UW Payment Refund</fullName>
            </value>
            <value>
                <fullName>Policy Inquiry_NCB Cases</fullName>
            </value>
            <value>
                <fullName>Policy Inquiry_Claim Payment Status</fullName>
            </value>
            <value>
                <fullName>Policy Inquiry_Reinstatement Status</fullName>
            </value>
            <value>
                <fullName>Policy Inquiry_CS_Cek Pengalihan Dana (Switching)</fullName>
            </value>
            <value>
                <fullName>Policy Inquiry_CS_Cek Perbedaan / perubahan TTD</fullName>
            </value>
            <value>
                <fullName>Policy Inquiry_CS_Cek Perubahan Ahli waris</fullName>
            </value>
            <value>
                <fullName>Policy Inquiry_CS_Cek Perubahan Data Pertanggungan</fullName>
            </value>
            <value>
                <fullName>Policy Inquiry_CS_Cek Perubahan Ejaan Nama</fullName>
            </value>
            <value>
                <fullName>Policy Inquiry_CS_Cek Perubahan Frekuensi Pembayaran</fullName>
            </value>
            <value>
                <fullName>Policy Inquiry_CS_Cek Perubahan ID KTP</fullName>
            </value>
            <value>
                <fullName>Policy Inquiry_CS_Cek Perubahan Pemegang Polis</fullName>
            </value>
            <value>
                <fullName>Policy Inquiry_CS_Cek Perubahan SKDKK</fullName>
            </value>
            <value>
                <fullName>Policy Inquiry_CS_Cek Perubahan SKDR</fullName>
            </value>
            <value>
                <fullName>Policy Inquiry_CS_Cek Perubahan Tanggal Lahir</fullName>
            </value>
            <value>
                <fullName>Policy Inquiry_Redemption Status</fullName>
            </value>
            <value>
                <fullName>Cek Refund Premi (Collection Related)</fullName>
            </value>
            <value>
                <fullName>Policy Inquiry_Account Balance</fullName>
            </value>
            <value>
                <fullName>Policy Inquiry_Claim Status</fullName>
            </value>
            <value>
                <fullName>Policy Inquiry_Complaint Status</fullName>
            </value>
            <value>
                <fullName>Policy Inquiry_Policy Status</fullName>
            </value>
            <value>
                <fullName>Policy Inquiry_CS_Cek Switching &amp; Redirection</fullName>
            </value>
            <value>
                <fullName>Policy Inquiry_CS_Cek Top Up Berkala (RTU)</fullName>
            </value>
            <value>
                <fullName>Policy Inquiry_Withdraw Status</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>