force-app/main/default/objects/Log_Book_Activitiy_Detail__c/fields/Count_SMS__c.field-meta.xml
<CustomField>
    <fullName>Count_SMS__c</fullName>
    <label>Count SMS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>