force-app/main/default/objects/Log_Book_Activitiy_Detail__c/fields/Customer_Mood__c.field-meta.xml
<CustomField>
    <fullName>Customer_Mood__c</fullName>
    <label>Customer Mood</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Happy</fullName>
                <color>#33CC00</color>
                <label>Happy</label>
            </value>
            <value>
                <fullName>Normal</fullName>
                <color>#F3D904</color>
                <label>Normal</label>
            </value>
            <value>
                <fullName>Angry</fullName>
                <color>#FF0000</color>
                <label>Angry</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>