force-app/main/default/objects/Log_Book_Activitiy_Detail__c/fields/Customer_Relation__c.field-meta.xml
<CustomField>
    <fullName>Customer_Relation__c</fullName>
    <label>Customer Relation</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Diri Sendiri</fullName>
            </value>
            <value>
                <fullName>Suami/Istri</fullName>
            </value>
            <value>
                <fullName>Anak</fullName>
            </value>
            <value>
                <fullName>Orang Tua</fullName>
            </value>
            <value>
                <fullName>Wali</fullName>
            </value>
            <value>
                <fullName>Mertua</fullName>
            </value>
            <value>
                <fullName>Cucu</fullName>
            </value>
            <value>
                <fullName>Nenek/Kakek</fullName>
            </value>
            <value>
                <fullName>Sepupu</fullName>
            </value>
            <value>
                <fullName>Paman</fullName>
            </value>
            <value>
                <fullName>Bibi</fullName>
            </value>
            <value>
                <fullName>Saudara Laki-Laki</fullName>
            </value>
            <value>
                <fullName>Saudara Perempuan</fullName>
            </value>
            <value>
                <fullName>Keponakan Laki-Laki</fullName>
            </value>
            <value>
                <fullName>Keponakan Perempuan</fullName>
            </value>
            <value>
                <fullName>Tunangan</fullName>
            </value>
            <value>
                <fullName>Pasangan</fullName>
            </value>
            <value>
                <fullName>Ahli Waris</fullName>
            </value>
            <value>
                <fullName>Yayasan</fullName>
            </value>
            <value>
                <fullName>Karyawan</fullName>
            </value>
            <value>
                <fullName>Kepemilikan Tanah</fullName>
            </value>
            <value>
                <fullName>Lain-Lain</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>