force-app/main/default/objects/Log_Book_Activitiy_Detail__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ADS</fullName>
            </value>
            <value>
                <fullName>CCC</fullName>
            </value>
            <value>
                <fullName>CCC Request</fullName>
            </value>
            <value>
                <fullName>CLAIM</fullName>
            </value>
            <value>
                <fullName>CMU</fullName>
            </value>
            <value>
                <fullName>CR</fullName>
                <label>Collection &amp; CR</label>
            </value>
            <value>
                <fullName>Corpsol</fullName>
            </value>
            <value>
                <fullName>Date Stewardes</fullName>
            </value>
            <value>
                <fullName>DMU</fullName>
            </value>
            <value>
                <fullName>DPLK</fullName>
            </value>
            <value>
                <fullName>UW</fullName>
                <label>NB / UW</label>
            </value>
            <value>
                <fullName>POS</fullName>
            </value>
            <value>
                <fullName>Tele Services</fullName>
            </value>
            <value>
                <fullName>BO</fullName>
                <isActive>false</isActive>
                <label>BO</label>
            </value>
            <value>
                <fullName>COLL</fullName>
                <isActive>false</isActive>
                <label>COLL</label>
            </value>
            <value>
                <fullName>NB</fullName>
                <isActive>false</isActive>
                <label>NB</label>
            </value>
            <value>
                <fullName>NONE</fullName>
                <isActive>false</isActive>
                <label>NONE</label>
            </value>
            <value>
                <fullName>Quick Responses</fullName>
                <isActive>false</isActive>
                <label>Quick Responses</label>
            </value>
            <value>
                <fullName>SALES</fullName>
                <isActive>false</isActive>
                <label>SALES</label>
            </value>
            <value>
                <fullName>Walk In/RO</fullName>
                <isActive>false</isActive>
                <label>Walk In/RO</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>