force-app/main/default/objects/Log_Book_Activitiy_Detail__c/fields/Document__c.field-meta.xml
<CustomField>
    <fullName>Document__c</fullName>
    <label>Document</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Kind_Of_Transaction__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Akta Kematian (Asli / Legalisir)</fullName>
            </value>
            <value>
                <fullName>Bukti OB/Transfer Lumpsum</fullName>
            </value>
            <value>
                <fullName>Bukti OB/Transfer Pembayaran Duplikat Kartu</fullName>
            </value>
            <value>
                <fullName>Bukti OB/Transfer Pembayaran Duplikat Polis Konven</fullName>
            </value>
            <value>
                <fullName>Bukti OB/Transfer Pemulihan Polis</fullName>
            </value>
            <value>
                <fullName>Bukti Pemakaman</fullName>
            </value>
            <value>
                <fullName>Bukti Pembayaran Pinjaman Polis</fullName>
            </value>
            <value>
                <fullName>Bukti Pendukung dari Nasabah</fullName>
            </value>
            <value>
                <fullName>Buku Polis</fullName>
            </value>
            <value>
                <fullName>Form Penyelesaian  Keluhan</fullName>
            </value>
            <value>
                <fullName>Form Speciment TTD</fullName>
            </value>
            <value>
                <fullName>Formulir Batal SPAJ</fullName>
            </value>
            <value>
                <fullName>Formulir Batal Withdrawal</fullName>
            </value>
            <value>
                <fullName>Formulir Claim Ketidakmampuan</fullName>
            </value>
            <value>
                <fullName>Formulir Claim Meninggal</fullName>
            </value>
            <value>
                <fullName>Formulir Claim Penyakit Kritis</fullName>
            </value>
            <value>
                <fullName>Formulir Claim Rawat Inap</fullName>
            </value>
            <value>
                <fullName>Formulir Claim Rawat Jalan</fullName>
            </value>
            <value>
                <fullName>Formulir Dana Investasi</fullName>
            </value>
            <value>
                <fullName>Formulir FP5</fullName>
            </value>
            <value>
                <fullName>Formulir Keluhan Nasabah</fullName>
            </value>
            <value>
                <fullName>Formulir NCB</fullName>
            </value>
            <value>
                <fullName>Formulir Pembatalan Polis (UCO)</fullName>
            </value>
            <value>
                <fullName>Formulir Pengantar Express Claim</fullName>
            </value>
            <value>
                <fullName>Formulir Pernyataan Kesahatan</fullName>
            </value>
            <value>
                <fullName>Formulir Perubahan Data Polis</fullName>
            </value>
            <value>
                <fullName>Formulir Pinjaman Polis</fullName>
            </value>
            <value>
                <fullName>Formulir PPS</fullName>
            </value>
            <value>
                <fullName>Formulir Redemption</fullName>
            </value>
            <value>
                <fullName>Formulir SKD Rawat Inap</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>