force-app/main/default/objects/Log_Book_Activitiy_Detail__c/fields/Document_Information__c.field-meta.xml
<CustomField>
    <fullName>Document_Information__c</fullName>
    <label>Document Information</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>