force-app/main/default/objects/Log_Book_Activitiy_Detail__c/fields/Document_Specification__c.field-meta.xml
<CustomField>
    <fullName>Document_Specification__c</fullName>
    <label>Document Specification</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Copy</fullName>
            </value>
            <value>
                <fullName>Original</fullName>
            </value>
            <value>
                <fullName>Legalize</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>