force-app/main/default/objects/Log_Book_Activitiy_Detail__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Submission</fullName>
            </value>
            <value>
                <fullName>Japen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>