force-app/main/default/objects/Log_Book_Activitiy_Detail__c/fields/Dokumen_Tambahan__c.field-meta.xml
<CustomField>
    <fullName>Dokumen_Tambahan__c</fullName>
    <label>Dokumen Tambahan</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Formulir Pernyataan Tandatangan atau Perubahan Tandatangan</fullName>
            </value>
            <value>
                <fullName>Akta kelahiran Pemegang Polis (Copy)</fullName>
            </value>
            <value>
                <fullName>Akta kelahiran Pemegang Polis (Legalisir)</fullName>
            </value>
            <value>
                <fullName>Akta Kelahiran Ahli Waris (Copy)</fullName>
            </value>
            <value>
                <fullName>Akta Kelahiran Ahli Waris (Legalisir)</fullName>
            </value>
            <value>
                <fullName>Akta kelahiran Tertanggung (Copy)</fullName>
            </value>
            <value>
                <fullName>Akta kelahiran Tertanggung (Legalisir)</fullName>
            </value>
            <value>
                <fullName>Akta Kematian (Legalisir)</fullName>
            </value>
            <value>
                <fullName>Akta Kematian (Copy)</fullName>
            </value>
            <value>
                <fullName>Berita Acara Kepolisian (asli)</fullName>
            </value>
            <value>
                <fullName>Berita Acara Kepolisian (Legalisir)</fullName>
            </value>
            <value>
                <fullName>Berita Acara Kepolisian (Copy)</fullName>
            </value>
            <value>
                <fullName>Buku nikah/Akta nikah (Legalisir)</fullName>
            </value>
            <value>
                <fullName>Buku nikah/Akta nikah (Copy)</fullName>
            </value>
            <value>
                <fullName>Bukti Transfer/VA/OB</fullName>
            </value>
            <value>
                <fullName>Buku Polis</fullName>
            </value>
            <value>
                <fullName>Buku Tabungan (Copy)</fullName>
            </value>
            <value>
                <fullName>Foto nasabah dengan KTP</fullName>
            </value>
            <value>
                <fullName>Hasil laboratorium (Legalisir)</fullName>
            </value>
            <value>
                <fullName>Hasil laboratorium (Copy)</fullName>
            </value>
            <value>
                <fullName>Hasil Visum et repertum</fullName>
            </value>
            <value>
                <fullName>Ijazah (Legalisir)</fullName>
            </value>
            <value>
                <fullName>Ijazah Ahli Waris (Legalisir)</fullName>
            </value>
            <value>
                <fullName>Ijazah Ahli Waris (Copy)</fullName>
            </value>
            <value>
                <fullName>Ijazah (Copy)</fullName>
            </value>
            <value>
                <fullName>Kartu Kredit (Copy)</fullName>
            </value>
            <value>
                <fullName>Kartu Keluarga (Copy)</fullName>
            </value>
            <value>
                <fullName>Kartu Keluarga (Legalisir)</fullName>
            </value>
            <value>
                <fullName>KTP Pemilik Rekening (Copy)</fullName>
            </value>
            <value>
                <fullName>KTP Tertanggung (Copy)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>