force-app/main/default/objects/Log_Book_Activitiy_Detail__c/fields/E_Form__c.field-meta.xml
<CustomField>
    <fullName>E_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <label>E-Form Sudah Diisi</label>
    <type>Checkbox</type>
</CustomField>