force-app/main/default/objects/Log_Book_Activitiy_Detail__c/fields/EForm__c.field-meta.xml
<CustomField>
    <fullName>EForm__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Butuh EForm</label>
    <type>Checkbox</type>
</CustomField>