force-app/main/default/objects/Log_Book_Activitiy_Detail__c/fields/EFORM_Transaction__c.field-meta.xml
<CustomField>
    <fullName>EFORM_Transaction__c</fullName>
    <formula>IF (E_Form__c	= TRUE, &quot;YA&quot;, &quot;TIDAK&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EFORM Transaction</label>
    <type>Text</type>
</CustomField>