force-app/main/default/objects/Log_Book_Activitiy_Detail__c/fields/Email_Non_PP__c.field-meta.xml
<CustomField>
    <fullName>Email_Non_PP__c</fullName>
    <description>Send Mail PP</description>
    <label>Email Non PP</label>
    <type>Email</type>
</CustomField>