force-app/main/default/objects/Log_Book_Activitiy_Detail__c/fields/Email_PP__c.field-meta.xml
<CustomField>
    <fullName>Email_PP__c</fullName>
    <description>lookup email contact</description>
    <label>Email PP</label>
    <type>Email</type>
</CustomField>