force-app/main/default/objects/Log_Book_Activitiy_Detail__c/fields/Form_Tambahan__c.field-meta.xml
<CustomField>
    <fullName>Form_Tambahan__c</fullName>
    <label>Form Tambahan</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Kind_Of_Transaction__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Formulir Deklarasi Individu (CRS)</fullName>
            </value>
            <value>
                <fullName>Formulir Deklarasi Badan Usaha (CRS)</fullName>
            </value>
            <value>
                <fullName>Form Keberatan CRS</fullName>
            </value>
            <value>
                <fullName>Formulir FP5</fullName>
            </value>
            <value>
                <fullName>Surat Pernyataan Tanda Tangan dan Perubahan Data Polis</fullName>
            </value>
            <value>
                <fullName>Surat Kuasa Debet Rekening</fullName>
            </value>
            <value>
                <fullName>Surat Kuasa Debet Kartu Kredit</fullName>
            </value>
            <value>
                <fullName>Formulir Pernyataan Kesahatan</fullName>
            </value>
            <value>
                <fullName>Formulir Penarikan Sebagian Unit atau Pembatalan Polis</fullName>
                <isActive>false</isActive>
                <label>Formulir Penarikan Sebagian Unit atau Pembatalan Polis</label>
            </value>
            <value>
                <fullName>Formulir Pernyataan Kesehatan dan Perubahan Data Polis</fullName>
                <isActive>false</isActive>
                <label>Formulir Pernyataan Kesehatan dan Perubahan Data Polis</label>
            </value>
            <value>
                <fullName>Formulir Perubahan Data Polis</fullName>
                <isActive>false</isActive>
                <label>Formulir Perubahan Data Polis</label>
            </value>
            <value>
                <fullName>Formulir Transaksi Subdana PAYDI</fullName>
                <isActive>false</isActive>
                <label>Formulir Transaksi Subdana PAYDI</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>