force-app/main/default/objects/Log_Book_Activitiy_Detail__c/fields/Form_Utama__c.field-meta.xml
<CustomField>
    <fullName>Form_Utama__c</fullName>
    <label>Form Utama</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Kind_Of_Transaction__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Request_POS_Pengalihan Dana (Switching)</fullName>
            </value>
            <value>
                <fullName>Request_POS_Perubahan Alokasi Dana (Redirection)</fullName>
            </value>
            <value>
                <fullName>Request_POS Lumpsum</fullName>
            </value>
            <value>
                <fullName>Request_POS_Switching &amp; Redirection</fullName>
            </value>
            <value>
                <fullName>Request_POS_Perubahan Ahli waris</fullName>
            </value>
            <value>
                <fullName>Request_POS_ Perubahan Alamat email</fullName>
            </value>
            <value>
                <fullName>Request_POS_ Perubahan Alamat Koresponden</fullName>
            </value>
            <value>
                <fullName>Request_POS_Perubahan ID KTP</fullName>
            </value>
            <value>
                <fullName>Request_POS_Perubahan Nomor Kontak</fullName>
            </value>
            <value>
                <fullName>Request_POS_Cuti Premi</fullName>
            </value>
            <value>
                <fullName>Request_POS Pemulihan Polis</fullName>
            </value>
            <value>
                <fullName>Request_POS_Withdrawal</fullName>
            </value>
            <value>
                <fullName>Request_POS_Withdrawal Big Amount</fullName>
            </value>
            <value>
                <fullName>Request_POS_Redemption</fullName>
            </value>
            <value>
                <fullName>Request_POS Cooling off</fullName>
            </value>
            <value>
                <fullName>Request_POS_Policy Loan MSW</fullName>
            </value>
            <value>
                <fullName>Request_POS_Loan MSW</fullName>
            </value>
            <value>
                <fullName>Request_POS_Perubahan SKDR</fullName>
            </value>
            <value>
                <fullName>Request_POS_Perubahan SKDKK</fullName>
            </value>
            <value>
                <fullName>Request_POS_Perubahan Data Pertanggungan</fullName>
            </value>
            <value>
                <fullName>Request_POS_Perubahan Tanggal Lahir</fullName>
            </value>
            <value>
                <fullName>Request_POS_Payment Policy Loan MSW</fullName>
            </value>
            <value>
                <fullName>Request_POS Top Up Berkala</fullName>
            </value>
            <value>
                <fullName>Request_POS_Perubahan Ejaan Nama</fullName>
            </value>
            <value>
                <fullName>Request_POS_Perubahan Lainnya (Agama)</fullName>
            </value>
            <value>
                <fullName>Request_POS_Perubahan Status Perkawinan</fullName>
            </value>
            <value>
                <fullName>Request_POS_Perubahan Pekerjaan</fullName>
            </value>
            <value>
                <fullName>Request_POS_Penghentian Cuti Premi</fullName>
            </value>
            <value>
                <fullName>Request_POS_Perubahan Frekuensi Pembayaran</fullName>
            </value>
            <value>
                <fullName>Request_POS_Perubahan Pemegang Polis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>