force-app/main/default/objects/Log_Book_Activitiy_Detail__c/fields/Input_Form_Utama__c.field-meta.xml
<CustomField>
    <fullName>Input_Form_Utama__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Input Form Utama</label>
    <type>Checkbox</type>
</CustomField>