force-app/main/default/objects/Log_Book_Activitiy_Detail__c/fields/Is_Non_Customer__c.field-meta.xml
<CustomField>
    <fullName>Is_Non_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Non Customer</label>
    <type>Checkbox</type>
</CustomField>