force-app/main/default/objects/Log_Book_Activitiy_Detail__c/fields/Is_Policy_Holder__c.field-meta.xml
<CustomField>
    <fullName>Is_Policy_Holder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Policy Holder</label>
    <type>Checkbox</type>
</CustomField>