force-app/main/default/objects/Log_Book_Activitiy_Detail__c/fields/Jenis_Perubahan_Lainnya__c.field-meta.xml
<CustomField>
    <fullName>Jenis_Perubahan_Lainnya__c</fullName>
    <label>Jenis Perubahan Lainnya</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Kind_Of_Transaction__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Perubahan Jenis Kelamin</fullName>
            </value>
            <value>
                <fullName>Perubahan Kewarganegaraan</fullName>
            </value>
            <value>
                <fullName>Perubahan Pekerjaan</fullName>
            </value>
            <value>
                <fullName>Perubahan Status Perkawinan</fullName>
            </value>
            <value>
                <fullName>Perubahan Agama</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>