force-app/main/default/objects/Log_Book_Activitiy_Detail__c/fields/Kind_Of_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Kind_Of_Transaction__c</fullName>
    <label>Kind Of Transaction</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Department__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Activasi EMMA</fullName>
            </value>
            <value>
                <fullName>ADS - Perubahan Alamat Koresponden</fullName>
            </value>
            <value>
                <fullName>Already Activated Emma</fullName>
            </value>
            <value>
                <fullName>Call Back Customer</fullName>
            </value>
            <value>
                <fullName>Call Back DMU</fullName>
            </value>
            <value>
                <fullName>Call Confirmation CR Withdrawal PBC</fullName>
            </value>
            <value>
                <fullName>Call Confirmation CR Withdrawal Reguler</fullName>
            </value>
            <value>
                <fullName>Cancelled Redemption</fullName>
            </value>
            <value>
                <fullName>Cancelled Transaction</fullName>
            </value>
            <value>
                <fullName>Cek Cuti Premi</fullName>
            </value>
            <value>
                <fullName>Cek Lumpsum</fullName>
            </value>
            <value>
                <fullName>Cek NB/UW Refund</fullName>
            </value>
            <value>
                <fullName>Cek No Claim Bonus (NCB)</fullName>
            </value>
            <value>
                <fullName>Cek Payment</fullName>
            </value>
            <value>
                <fullName>Cek Payment Collection</fullName>
            </value>
            <value>
                <fullName>Cek Pemulihan Polis</fullName>
            </value>
            <value>
                <fullName>Cek Pengalihan Dana (Switching)</fullName>
            </value>
            <value>
                <fullName>Cek Perbedaan / Perubahan TTD</fullName>
            </value>
            <value>
                <fullName>Cek Perubahan Ahli Waris</fullName>
            </value>
            <value>
                <fullName>Cek Perubahan Data Pertanggungan</fullName>
            </value>
            <value>
                <fullName>Cek Perubahan Ejaan Nama</fullName>
            </value>
            <value>
                <fullName>Cek Perubahan Frekuensi Pembayaran</fullName>
            </value>
            <value>
                <fullName>Cek Perubahan ID KTP</fullName>
            </value>
            <value>
                <fullName>Cek Perubahan Pemegang Polis</fullName>
            </value>
            <value>
                <fullName>Cek Perubahan SKDKK</fullName>
            </value>
            <value>
                <fullName>Cek Perubahan SKDR</fullName>
            </value>
            <value>
                <fullName>Cek Perubahan Tanggal Lahir</fullName>
            </value>
            <value>
                <fullName>Cek Redemption</fullName>
            </value>
            <value>
                <fullName>Cek Refund Premi (Collection Related)</fullName>
            </value>
            <value>
                <fullName>Cek Refund Premi (NB)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>