force-app/main/default/objects/Log_Book_Activitiy_Detail__c/fields/Kind_Of_Transaction_Formatted__c.field-meta.xml
<CustomField>
    <fullName>Kind_Of_Transaction_Formatted__c</fullName>
    <formula>IF( ISPICKVAL(Kind_Of_Transaction__c, &apos;Request_POS_Perubahan Lainnya&apos;), 
TEXT( Kind_Of_Transaction__c ) + &apos; - &apos; + TEXT( Jenis_Perubahan_Lainnya__c ), 
TEXT( Kind_Of_Transaction__c ) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Kind Of Transaction Formatted</label>
    <type>Text</type>
</CustomField>