force-app/main/default/objects/Log_Book_Activitiy_Detail__c/fields/LastModifiedParent__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedParent__c</fullName>
    <formula>Log_Book_Activitiy__r.LastModifiedDate</formula>
    <label>LastModifiedParent</label>
    <type>DateTime</type>
</CustomField>