force-app/main/default/objects/Log_Book_Activitiy_Detail__c/fields/Log_Book_Activitiy__c.field-meta.xml
<CustomField>
    <fullName>Log_Book_Activitiy__c</fullName>
    <label>Log Book Activitiy</label>
    <referenceTo>Log_Book_Activitiy__c</referenceTo>
    <relationshipLabel>Log Book Activitiy Details</relationshipLabel>
    <relationshipName>Log_Book_Activitiy_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>