force-app/main/default/objects/Log_Book_Activitiy_Detail__c/fields/Log_Case__c.field-meta.xml
<CustomField>
    <fullName>Log_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Log Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Log Book Activitiy Details</relationshipLabel>
    <relationshipName>Log_Book_Activitiy_Details</relationshipName>
    <type>Lookup</type>
</CustomField>