force-app/main/default/objects/Log_Book_Activitiy_Detail__c/fields/Need_CR__c.field-meta.xml
<CustomField>
    <fullName>Need_CR__c</fullName>
    <label>Need CR</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>