force-app/main/default/objects/Log_Book_Activitiy_Detail__c/fields/Other_Document__c.field-meta.xml
<CustomField>
    <fullName>Other_Document__c</fullName>
    <label>Other Document</label>
    <length>255</length>
    <type>Text</type>
</CustomField>